--- a/src/scss/constants.scss
+++ b/src/scss/constants.scss
@@ -1,10 +1,10 @@
-$color-primary-gray: #444A59;
+$color-primary-gray: #444a59;
 $color-light-gray: #808080;
 $color-warm-white: #f8f8f8;
-$color-white: #ffffff;
+$color-white: #fff;
 $color-creamy: #d9d9d9;
-$color-blue: #358ED7;
-$color-pink: #F54B5E;
+$color-blue: #358ed7;
+$color-pink: #f54b5e;
 
 $fontSize-tiny: 8px;
 $fontSize-medium: 13px;
