--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -2,145 +2,6 @@
 @import 'fonts';
 @import 'mixins';
 @import 'buttons';
-@import 'header';
+@import 'layout';
 @import 'product';
-
-html {
-  height: 100%;
-}
-
-body {
-  @include font-lato-regular;
-  min-height: 100%;
-  margin: 0;
-  display: flex;
-  flex-direction: column;
-  flex: 1 0 auto;
-  font-size: $fontSize-medium;
-  text-rendering: optimizeLegibility;
-  -moz-osx-font-smoothing: grayscale;
-  -webkit-font-smoothing: antialiased;
-  color: $color-primary-gray;
-  background-color: $color-warm-white;
-}
-
-* {
-  box-sizing: border-box;
-}
-
-h1, p, figure {
-  margin: 0;
-  font-weight: normal;
-}
-
-a,
-a:hover,
-a:visited{
-  text-decoration: none;
-  color: $color-primary-gray;
-}
-
-ul, li {
-  margin: 0;
-  padding: 0;
-  list-style-type: none;
-}
-
-button {
-  appearance: none;
-  border: 0;
-}
-
-header,
-footer {
-  height: 60px;
-
-  display: flex;
-  flex-direction: row;
-  align-items: center;
-
-  text-transform: uppercase;
-  background-color: $color-white;
-}
-
-main {
-  display: flex;
-  flex-direction: row;
-  flex: 1 0 auto;
-  margin: 30px 0 20px;
-}
-
-.container {
-  width: 100%;
-  max-width: 1240px;
-  padding: 0 40px;
-  margin: 0 auto;
-}
-
-.page-title {
-  font-size: $fontSize-big;
-}
-
-/* ==========================================================================
-   Pagination
-   ========================================================================== */
-
-.pagination {
-  height: 45px;
-  margin: 30px auto;
-  text-align: center;
-}
-
-.pagination__list {
-  height: 100%;
-  display: inline-flex;
-  flex-direction: row;
-  align-items: center;
-}
-
-.pagination__item {
-  @include font-lato-bold;
-  height: 100%;
-  width: 45px;
-  font-size: $fontSize-medium;
-  letter-spacing: 1.39px;
-  text-align: center;
-}
-
-.pagination__link {
-  height: 100%;
-  width: 100%;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  color: $color-primary-gray;
-  cursor: pointer;
-}
-
-.pagination__link.current {
-  @include font-lato-bold;
-  font-weight: 800;
-  pointer-events: none;
-}
-
-.pagination__link.break {
-  pointer-events: none;
-}
-
-.pagination__link:hover {
-  text-decoration: underline;
-}
-
-.pagination__link .icon {
-  width: 8px;
-  fill: $color-primary-gray;
-}
-
-/* ==========================================================================
-   Footer
-   ========================================================================== */
-
-.footer__sidenote {
-  @include font-lato-bold;
-  letter-spacing: 1.37px;
-}
+@import 'pagination';
