CS fixes using linter and initial slicing for product collection view component

--- a/src/scss/constants.scss
+++ b/src/scss/constants.scss
@@ -7,7 +7,11 @@ $color-blue: #358ed7;
 $color-pink: #f54b5e;
 
 $fontSize-tiny: 8px;
+$fontSize-semi-small: 10px;
+$fontSize-small: 12px;
 $fontSize-medium: 13px;
 $fontSize-primary: 14px;
 $fontSize-big: 20px;
-$fontSize-small: 12px;
+
+$tabletWidthLimit: 1240px;
+$mobileWidthLimit: 768px;
