--- a/src/scss/layout.scss
+++ b/src/scss/layout.scss
@@ -88,6 +88,7 @@ main {
   align-items: flex-end;
   display: flex;
   flex-direction: row;
+  position: relative;
 
   &__item {
     align-items: flex-end;
