--- a/src/scss/product.scss
+++ b/src/scss/product.scss
@@ -5,9 +5,19 @@
   margin: 0 -10px;
 
   &__item {
-    flex: 1 0 33.3333%;
+    @include flex(1 0 33.3333%);
     max-width: 33.3333%;
     padding: 10px;
+
+    @include mobile {
+      @include flex(100%);
+      max-width: none;
+    }
+
+    @include tablet {
+      @include flex(1 0 50%);
+      max-width: 50%;
+    }
   }
 }
 
@@ -16,6 +26,7 @@
   display: flex;
   flex-direction: column;
   height: 100%;
+  width: 100%;
 
   &__image-wrapper {
     padding: 20px;
@@ -80,7 +91,6 @@
   }
 
   &__add-to-cart {
-    margin-top: 10px;
     margin-top: auto;
     width: 100%;
   }
