Product collection view component implemented

--- a/src/scss/constants.scss
+++ b/src/scss/constants.scss
@@ -5,6 +5,7 @@ $color-white: #fff;
 $color-creamy: #d9d9d9;
 $color-blue: #358ed7;
 $color-pink: #f54b5e;
+$color-shadow: #00000060;
 
 $fontSize-tiny: 8px;
 $fontSize-semi-small: 10px;
