--- a/src/scss/product_collection.scss
+++ b/src/scss/product_collection.scss
@@ -1,13 +1,19 @@
 .product-collection {
   display: block;
   position: absolute;
-  left: -206px;
-  top: 42px;
+  right: -1px;
+  top: 61px;
   width: 300px;
   background-color: $color-white;
   border: 1px solid $color-creamy;
   z-index: 2;
   padding: 10px;
+  box-shadow: 0 10px 10px #00000040;
+  transition: .4s;
+
+  &:hover {
+    box-shadow: 0 10px 10px $color-shadow;
+  }
 
   &__title {
     font-size: $fontSize-small;
@@ -31,32 +37,36 @@
 
     &__item {
       width: 100%;
-      height: 70px;
+      height: 69px;
       opacity: .7;
       transition: .5s;
       display: flex;
+
+      &:not(:last-child) {
+        border-bottom: 1px solid $color-creamy;
+      }
 
       &:hover {
         opacity: 1;
       }
 
       &__image-section {
-        @include flex(0 0 70px)
+        @include flex(0 0 69px)
       }
     }
   }
 
   .item-section {
-    height: 70px;
+    height: 69px;
     object-fit: cover;
 
     &__preview {
       padding: 5px;
-      @include flex(0 0 70px);
+      @include flex(0 0 69px);
 
       &__image {
-        height: 60px;
-        width: 60px;
+        height: 59px;
+        width: 59px;
       }
     }
 
@@ -88,7 +98,7 @@
         font-size: $fontSize-semi-small;
         cursor: pointer;
         margin-top: 5px;
-        color: #f54b5e;
+        color: $color-pink;
         text-align: right;
         margin-right: 10px;
       }
