Added a close element on products collection list view component

--- a/src/scss/constants.scss
+++ b/src/scss/constants.scss
@@ -1,4 +1,5 @@
 $color-primary-gray: #444a59;
+$color-dark-gray: #14161a;
 $color-light-gray: #808080;
 $color-warm-white: #f8f8f8;
 $color-white: #fff;
