--- a/src/scss/product_collection.scss
+++ b/src/scss/product_collection.scss
@@ -11,6 +11,14 @@
   box-shadow: 0 10px 10px #00000040;
   transition: .4s;
 
+  @include mobile {
+    right: 5px;
+  }
+
+  @include tablet {
+    right: 10px;
+  }
+
   &:hover {
     box-shadow: 0 10px 10px $color-shadow;
   }
@@ -34,6 +42,14 @@
     min-height: 70px;
     max-height: 350px;
     overflow-x: auto;
+
+    @include mobile {
+      max-height: 210px;
+    }
+
+    @include tablet {
+      max-height: 280px;
+    }
 
     &__item {
       width: 100%;
@@ -77,31 +93,54 @@
       &__title {
         @include font-lato-regular;
         text-transform: none;
-        font-size: $fontSize-semi-small;
         cursor: default;
       }
 
-      &__price {
-        @include font-lato-bolditalic;
-        font-weight: bold;
-        text-transform: none;
-        font-style: italic;
-        font-size: $fontSize-small;
-        cursor: default;
-        margin-top: 5px;
-      }
-
+      &__price,
       &__action-link {
         @include font-lato-bolditalic;
         text-transform: none;
-        font-weight: bold;
-        font-size: $fontSize-semi-small;
-        cursor: pointer;
         margin-top: 5px;
+        font-weight: bold;
+      }
+
+      &__action-link,
+      &__title {
+        font-size: $fontSize-semi-small;
+      }
+
+      &__price {
+        font-style: italic;
+        font-size: $fontSize-small;
+        cursor: default;
+      }
+
+      &__action-link {
+        cursor: pointer;
         color: $color-pink;
         text-align: right;
         margin-right: 10px;
+
+        &:hover {
+          text-decoration: underline;
+        }
       }
+    }
+  }
+
+  &__close-icon {
+    position: absolute;
+    right: 9px;
+    top: 9px;
+    fill: $color-primary-gray;
+    height: 13px;
+    width: 13px;
+    padding: 2px;
+    transition: .3s;
+    cursor: pointer;
+
+    &:hover {
+      fill: $color-dark-gray;
     }
   }
 }
